--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ djangorestframework-simplejwt==5.5.0
 djangorestframework==3.16.0
 qdrant-client==1.14.2
 langchain==0.3.25
+django-cors-headers==4.7.0
